deployment/mysql-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql-deployment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-deployment
    spec:
      containers:
      - image: mysql:5.7
        args:
        - "--ignore-db-dir=lost+found"
        name: mysql-deployment
        ports:
          - containerPort: 3306
            name: mysql
        volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql-service
spec:
  selector:
    app: mysql-deployment
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
